--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
         <img id="previewImage" src="profil vide.jpg" alt="Aperçu de l'image">
         </a>
         <input id="myFileInput" type="file" accept="image/*;capture=camera" style="display: none;">
-    </div>
+      </div>
     <div class="infos">
-        <form action="index.php" method="post">
-            <label class="titre_info" for="nom">Nom / nom du groupe : </label>
-            <input type="text" id="nom" name="nom" required>
+        <h2 class="info_titre">Informations sur le groupe</h2>
+        <label class="titre_info" for="nom">Nom / nom du groupe : </label>
+        <input class="input_info" type="text" id="nom" name="nom" required>
+        <a id="obligatoire">*</a>
+        <div class="barre"></div>
     </div>
   <script>
     const fileInput = document.getElementById('myFileInput');
